<resources>
    <string name="app_name">LvlUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LvlUp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="num_total_de_juegos">Num total de juegos:</string>
    <string name="dinero_gastado">Dinero gastado:</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_user">LvlUp</string>
    <string name="title_activity_platform">LvlUp</string>
    <string name="title_activity_game">LvlUp</string>
    <string name="title_activity_platform_detail">LvlUp</string>
    <string name="title_activity_game_detail">LvlUp</string>
    <string name="gameTitle">Titulo</string>
    <string name="gameDescription">Descripción</string>
    <string name="gamePlatforms">Plataformas</string>
    <string name="gameMoney">Dinero gastado:</string>
    <string name="gameComment">Comentario:</string>
    <string name="gameAddGame">Añadir Juego</string>
    <string name="gameModGame">Modificar Juego</string>
    <string name="gameDeleteGame">Eliminar Juego</string>
    <string name="gameSearch">Buscar</string>
    <string name="home">Inicio</string>
    <string name="games">Juegos</string>
    <string name="usergames">Favoritos</string>
    <string name="update">Actualizar</string>
    <string name="labelScore">Puntuación:</string>
    <string name="night_mode">Modo nocturno</string>


</resources>
